update test data

--- a/plot.ipynb
+++ b/plot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,14 +432,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Animation for Output_203256.dat ready\n"
+      "Animation for Output_201658.dat ready\n"
      ]
     }
    ],
@@ -449,7 +449,7 @@
     "folder_files = listdir()\n",
     "folder_files = [f for f in folder_files if (f.startswith('Output') and f.endswith('.dat'))]\n",
     "for file in folder_files:\n",
-    "        animate_data(file,ipf=10,ls='',marker='.',ms=1)\n",
+    "        animate_data(file,ipf=10)\n",
     "        print(f'Animation for {file} ready')"
    ]
   },
@@ -741,15 +741,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total iterations: 20000\n",
-      "Finished, total time: 31s\n",
+      "Total iterations: 200000\n",
+      "Finished, total time: 254s\n",
+      "\n",
+      "Total iterations: 200000\n",
+      "Finished, total time: 244s\n",
+      "\n",
+      "Total iterations: 200000\n",
+      "Finished, total time: 244s\n",
+      "\n",
+      "Total iterations: 200000\n",
+      "Finished, total time: 227s\n",
+      "\n",
+      "Total iterations: 200000\n",
+      "Finished, total time: 232s\n",
+      "\n",
+      "Total iterations: 200000\n",
+      "Finished, total time: 224s\n",
+      "\n",
+      "Total iterations: 200000\n",
+      "Finished, total time: 225s\n",
+      "\n",
+      "Total iterations: 200000\n",
+      "Finished, total time: 231s\n",
+      "\n",
+      "Total iterations: 200000\n",
+      "Finished, total time: 224s\n",
       "\n"
      ]
     }
@@ -763,7 +787,6 @@
     "fType = \"1\"\n",
     "r0 = \"0\"\n",
     "ds  = [\"1\",\"3\",\"5\"]\n",
-    "ds  = [\"3\"]\n",
     "deltaR = '0.001'\n",
     "maxR = \"50\"\n",
     "iterations = \"200000\"\n",
@@ -786,9 +809,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total iterations: 200000\n",
+      "Finished, total time: 219s\n",
+      "\n",
+      "Total iterations: 200000\n",
+      "Finished, total time: 223s\n",
+      "\n",
+      "Total iterations: 200000\n",
+      "Finished, total time: 220s\n",
+      "\n",
+      "Total iterations: 200000\n",
+      "Finished, total time: 219s\n",
+      "\n",
+      "Total iterations: 200000\n",
+      "Finished, total time: 221s\n",
+      "\n",
+      "Total iterations: 200000\n",
+      "Finished, total time: 219s\n",
+      "\n",
+      "Total iterations: 200000\n",
+      "Finished, total time: 223s\n",
+      "\n",
+      "Total iterations: 200000\n",
+      "Finished, total time: 226s\n",
+      "\n",
+      "Total iterations: 200000\n",
+      "Finished, total time: 222s\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Test for tanh curve\n",
     "\n",
@@ -818,9 +875,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total iterations: 200000\n",
+      "Finished, total time: 2225s\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Test for tanh curve\n",
     "\n",
@@ -859,7 +926,7 @@
     "\n",
     "fType = \"1\"\n",
     "r0 = \"0\"\n",
-    "ds  = ['3','3.5','4.0']\n",
+    "ds  = ['3','3.5','4.0','4.5']\n",
     "deltaR = '0.001'\n",
     "maxR = \"50\"\n",
     "iterations = \"200000\"\n",
@@ -1481,7 +1548,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1495,7 +1562,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
