update variable collapse

--- a/plot.ipynb
+++ b/plot.ipynb
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,40 +353,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total iterations: 2000\n",
+      "Total iterations: 20000\n",
       "nR: 5001\n",
-      "nR_extended: 5001\n",
+      "nR_extended: 5017\n",
       "dR_pointer: 0.010000\n",
       "dT_pointer: 0.002000\n",
-      "grid range: 0.000000 - 50.000000\n",
+      "grid range: 1.000000e-50 - 5.000000e+01\n",
       "\n",
       "nR: 2501\n",
-      "nR_extended: 2509\n",
+      "nR_extended: 2517\n",
       "dR_pointer: 0.010000\n",
       "dT_pointer: 0.002000\n",
-      "grid range: 25.000000 - 50.000000\n",
+      "grid range: 2.500000e+01 - 5.000000e+01\n",
       "\n",
       "nR: 2501\n",
       "nR_extended: 2517\n",
       "dR_pointer: 0.005000\n",
       "dT_pointer: 0.001000\n",
-      "grid range: 12.500000 - 25.000000\n",
+      "grid range: 1.250000e+01 - 2.500000e+01\n",
       "\n",
       "nR: 5001\n",
-      "nR_extended: 5009\n",
+      "nR_extended: 5017\n",
       "dR_pointer: 0.002500\n",
       "dT_pointer: 0.000500\n",
-      "grid range: 0.000000 - 12.500000\n",
+      "grid range: 1.000000e-50 - 1.250000e+01\n",
       "\n",
-      "iteration stato\n",
-      "Finished, total time: 30s\n",
+      "iteration start\n",
+      "Finished, total time: 300s\n",
       "\n"
      ]
     }
@@ -403,7 +403,7 @@
     "ko  = \"0.0\"\n",
     "deltaR = '0.01'\n",
     "maxR = \"50\"\n",
-    "iterations = \"2000\"\n",
+    "iterations = \"20000\"\n",
     "p0 = '0.000005'\n",
     "\n",
     "output = subprocess.check_output([\".\\VCollapse.exe\",  fType, p0, r0, d, deltaR, maxR, iterations], text=True,)\n",
